--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>СамСобіШеф | Робота в Одесі</title>
-  <meta name="description" content="СамСобіШеф — пошук підробітку та виконавців в Одесі та області. Додавайте завдання та знаходьте роботу!">
+  <meta name="description" content="СамСобіШеф — дошка підробітку та виконавців в Одесі та області. Додавайте завдання, шукайте роботу!">
   <link rel="icon" type="image/png" href="https://i.ibb.co/HLc01jWL/22c6c8c1-5106-4955-bec9-7c071a2a41e3.png"/>
   <style>
     body {font-family: Arial,sans-serif; background:#f5f7fc; margin:0; padding:0;}
@@ -15,11 +15,7 @@
     .ad-card {background:#fff; border-radius:13px; padding:13px 13px 8px 13px; margin-bottom:12px; box-shadow:0 1px 9px #dbe3f330;}
     .ad-title {font-size:16px; margin-bottom:5px; font-weight:600;}
     .ad-meta {font-size:13px; color:#3167ae; margin-bottom:3px;}
-    .ad-actions {display:flex; align-items:center; justify-content:space-between;}
-    .ad-likes {font-size:14px; cursor:pointer; color:#2093e7; display:flex; align-items:center;}
-    .ad-likes.liked {color:#ffad3d;}
-    .ad-likes span {margin-left:3px;}
-    .ad-views {font-size:13px; color:#b6cbe8;}
+    .ad-meta2 {font-size:12px; color:#999;}
     .modal-bg {position:fixed;z-index:10;top:0;left:0;width:100vw;height:100vh;background:#0005;display:flex;align-items:center;justify-content:center;animation:fadeIn .7s;transition:.4s;opacity:0;pointer-events:none;}
     .modal-bg.show {opacity:1; pointer-events:all;}
     .modal-card {background:#fff; border-radius:17px; box-shadow:0 4px 28px #b1d6fc45; width:340px; padding:26px 18px 12px; text-align:left; animation:popin .5s;}
@@ -60,45 +56,39 @@
   </div>
   <div class="msg" id="msg"></div>
   <script>
+    // SheetDB API — Твой URL
+    const SHEETDB_API = "https://sheetdb.io/api/v1/yb0rninf8e5x0";
     function $(x) {return document.getElementById(x);}
     function showMsg(txt) {
       $('msg').textContent = txt;
       $('msg').classList.add('show');
       setTimeout(()=>{$('msg').classList.remove('show');},2700);
     }
-    // Загрузка объявлений из localStorage
-    function loadAds() {
-      let a = localStorage.getItem('sshef_ads');
-      return a ? JSON.parse(a) : [];
-    }
-    // Сохранение объявлений в localStorage
-    function saveAds(ads) {
-      localStorage.setItem('sshef_ads', JSON.stringify(ads));
-    }
-    // Проверка украинского номера
     function validUAphone(phone) {
       let p = phone.replace(/\D/g, '');
       return (/^380\d{9}$/.test(p) || /^0\d{9}$/.test(p));
     }
-    // Отрисовка объявлений
     function renderAds() {
-      let wrap = $('ads-list');
-      let ads = loadAds();
-      if(!ads.length) {
-        wrap.innerHTML = '<div style="text-align:center;color:#8a8c9b;">Оголошень ще немає...</div>';
-        return;
-      }
-      wrap.innerHTML = '';
-      ads.forEach(ad=>{
-        let adHTML = `<div class="ad-card">
-          <div class="ad-title">${ad.desc}</div>
-          <div class="ad-meta">💰 <b>${ad.price}</b> грн | ${ad.phone}</div>
-          <div class="ad-meta" style="font-size:12px;">${ad.time}</div>
-        </div>`;
-        wrap.innerHTML += adHTML;
-      });
+      fetch(SHEETDB_API)
+        .then(resp=>resp.json())
+        .then(data=>{
+          let ads = data || [];
+          let wrap = $('ads-list');
+          if(!ads.length) {
+            wrap.innerHTML = '<div style="text-align:center;color:#8a8c9b;">Оголошень ще немає...</div>';
+            return;
+          }
+          wrap.innerHTML = '';
+          ads.reverse().forEach(ad=>{
+            let adHTML = `<div class="ad-card">
+              <div class="ad-title">${ad.desc}</div>
+              <div class="ad-meta">💰 <b>${ad.price}</b> грн | ${ad.phone}</div>
+              <div class="ad-meta2">${ad.time}</div>
+            </div>`;
+            wrap.innerHTML += adHTML;
+          });
+        });
     }
-    // События
     $('add-btn').onclick = ()=>{ $('add-modal').classList.add('show'); };
     $('cancel-modal').onclick = ()=>{ $('add-modal').classList.remove('show'); $('add-form').reset();};
     $('add-form').onsubmit = function(e){
@@ -106,18 +96,22 @@
       let desc=$('task-desc').value.trim(),price=$('task-price').value.trim(),phone=$('task-phone').value.trim();
       if(desc.length<10)return showMsg('Опис має бути від 10 символів!');
       if(!validUAphone(phone))return showMsg('Телефон некоректний!');
-      let ads = loadAds();
       let ad = {
         desc: desc,
         price: price,
         phone: phone,
         time: new Date().toLocaleString("uk-UA")
       };
-      ads.unshift(ad); // Новое наверху
-      saveAds(ads);
-      $('add-modal').classList.remove('show');$('add-form').reset();
-      showMsg('Оголошення додано!');
-      renderAds();
+      fetch(SHEETDB_API, {
+        method: "POST",
+        headers: {'Content-Type': 'application/json'},
+        body: JSON.stringify({data: ad})
+      }).then(resp=>resp.json())
+        .then(()=>{
+          $('add-modal').classList.remove('show');$('add-form').reset();
+          showMsg('Оголошення додано!');
+          setTimeout(renderAds, 1200);
+        });
     };
     window.onload = renderAds;
   </script>
