--- a/index.html
+++ b/index.html
@@ -114,6 +114,8 @@
         });
     };
     window.onload = renderAds;
+    // Автообновление объявлений каждые 5 секунд
+    setInterval(renderAds, 5000);
   </script>
 </body>
 </html>
