--- a/index.html
+++ b/index.html
@@ -7,44 +7,278 @@
   <meta name="description" content="СамСобіШеф — дошка підробітку та виконавців в Одесі та області. Додавайте завдання, шукайте роботу!">
   <link rel="icon" type="image/png" href="https://i.ibb.co/HLc01jWL/22c6c8c1-5106-4955-bec9-7c071a2a41e3.png"/>
   <style>
+    :root {
+      --main-bg: #f6fafc;
+      --card-bg: #fff;
+      --primary: #266bd3;
+      --primary-hover: #1656b2;
+      --logo-bg: #f4fafc;
+    }
     html, body {height:100%; margin:0; padding:0;}
-    body {font-family: Arial,sans-serif; background:#f5f7fc; margin:0; padding:0; overflow-x:hidden;}
-    .main-app {max-width:430px; min-height:100vh; margin:0 auto; padding:0 6px; display:flex;flex-direction:column;}
-    .logo {width:84px; display:block; margin:24px auto 10px; border-radius:22px;}
-    .search-wrap {width:100%; max-width:430px; margin:0 auto 6px;}
-    .search-inp {width:100%; font-size:16px; padding:11px 14px; border-radius:13px; border:1px solid #d7e4f5; outline:none; margin-bottom:7px;}
-    .ads-window {flex:1; overflow-y:auto; max-height:62vh; min-height:190px; padding-bottom:20px;}
-    .ad-card {background:#fff; border-radius:13px; padding:13px 13px 8px 13px; margin-bottom:12px; box-shadow:0 1px 9px #dbe3f330;}
-    .ad-title {font-size:16px; margin-bottom:5px; font-weight:600;}
-    .ad-meta {font-size:13px; color:#3167ae; margin-bottom:3px;}
-    .ad-meta2 {font-size:12px; color:#999;}
-    .ad-geo {font-size:13px; color:#46a54d; margin-bottom:3px;}
-    .add-btn-main {background:#2b81f7; color:#fff; border:none; font-weight:700; font-size:1.14em; padding:14px 18px; border-radius:13px; margin:16px auto 18px; display:block; box-shadow:0 2px 12px #d7e4f540; width:100%;transition:.25s; position:sticky; bottom:0;}
-    .modal-bg {position:fixed;z-index:11;top:0;left:0;width:100vw;height:100vh;background:#0007;display:flex;align-items:center;justify-content:center;transition:.4s;opacity:0;pointer-events:none;}
-    .modal-bg.show {opacity:1; pointer-events:all;}
-    .modal-card {background:#fff; border-radius:17px; box-shadow:0 4px 28px #b1d6fc45; width:340px; padding:26px 18px 12px; text-align:left; animation:popin .5s;}
-    @keyframes popin {0%{transform:scale(.9);opacity:0;}100%{transform:scale(1);opacity:1;}}
-    .modal-card h2 {font-size:18px; margin:0 0 14px;}
-    .modal-field {margin-bottom:16px;}
-    .modal-field input, .modal-field textarea {width:100%; font-size:15px; padding:9px 9px; border-radius:8px; border:1px solid #d7e4f5; outline:none;}
-    .geo-btn {margin:6px 0 0 0; display:inline-block; font-size:13px; background:#eee; border:none; border-radius:7px; padding:6px 13px; color:#1c5; cursor:pointer;}
-    .modal-btns {display:flex;justify-content:flex-end;gap:15px;}
-    .modal-btn {padding:10px 21px; font-size:15px; font-weight:700; border-radius:10px; border:none; background:#2186e7; color:#fff; cursor:pointer;}
-    .modal-btn.cancel {background:#f0f0f0; color:#205;}
-    .msg {padding:12px 9px; margin:19px 0; background:#fff4cc; border-radius:10px; color:#ae820c; text-align:center; font-size:1.13em; opacity:0; transition:.3s;}
-    .msg.show {opacity:1;}
-    .fadein {animation:fadeIn .8s;}
-    @keyframes fadeIn {from{opacity:0;}to{opacity:1;}}
+    body {
+      font-family: Arial,sans-serif;
+      background: var(--main-bg);
+      margin:0; padding:0;
+      overflow-x: hidden;
+      min-height: 100vh;
+      box-sizing: border-box;
+    }
+    .main-app {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: flex-start;
+      height: 100vh;
+      min-height: 100vh;
+      width: 100vw;
+      background: var(--main-bg);
+      box-sizing: border-box;
+      position: relative;
+    }
+    .logo-main {
+      width: 106px;
+      height: 106px;
+      display: block;
+      margin: 24px auto 12px;
+      border-radius: 29px;
+      background: var(--logo-bg);
+      box-shadow: 0 2px 24px #d4e8ff60;
+      padding: 16px;
+      object-fit: contain;
+    }
+    .search-wrap {
+      width: 100%;
+      max-width: 430px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin: 0 auto 7px;
+    }
+    .search-inp {
+      width: 100%;
+      font-size: 17px;
+      padding: 13px 15px;
+      border-radius: 13px;
+      border: 1px solid #d7e4f5;
+      outline: none;
+      background: #f6faff;
+      box-sizing: border-box;
+      margin-bottom: 7px;
+      margin-top: 0;
+    }
+    .ads-container-outer {
+      flex: 1 1 auto;
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: flex-start;
+      min-height: 0;
+    }
+    .ads-window {
+      width: 100%;
+      max-width: 430px;
+      margin: 0 auto;
+      background: var(--card-bg);
+      border-radius: 20px;
+      box-shadow: 0 2px 24px #e3effc38;
+      padding: 13px 0 0 0;
+      overflow-y: auto;
+      min-height: 210px;
+      max-height: 62vh;
+      position: relative;
+      display: flex;
+      flex-direction: column;
+      scrollbar-width: thin;
+      scrollbar-color: #acd4ff #fff;
+    }
+    .ads-list {
+      width: 100%;
+      padding: 0 10px 10px 10px;
+      box-sizing: border-box;
+      margin: 0;
+    }
+    .ad-card {
+      background: #fafdff;
+      border-radius: 13px;
+      padding: 14px 14px 8px 14px;
+      margin-bottom: 13px;
+      box-shadow: 0 1px 7px #dbe3f324;
+      text-align: left;
+    }
+    .ad-title {
+      font-size: 16px;
+      margin-bottom: 4px;
+      font-weight: 600;
+      color: #194d8f;
+      word-break: break-word;
+    }
+    .ad-meta {
+      font-size: 14px;
+      color: #3167ae;
+      margin-bottom: 3px;
+      word-break: break-all;
+    }
+    .ad-meta2 {
+      font-size: 12px;
+      color: #7a8c9b;
+    }
+    .ad-geo {
+      font-size: 13px;
+      color: #46a54d;
+      margin-bottom: 3px;
+    }
+    .add-btn-main {
+      background: var(--primary);
+      color: #fff;
+      border: none;
+      font-weight: 700;
+      font-size: 1.14em;
+      padding: 15px 18px 15px 18px;
+      border-radius: 17px 17px 0 0;
+      margin: 0 auto;
+      width: 100%;
+      max-width: 430px;
+      box-shadow: 0 -3px 14px #bcdcff20;
+      position: fixed;
+      left: 50%;
+      bottom: 0;
+      transform: translateX(-50%);
+      z-index: 40;
+      transition: background .18s;
+    }
+    .add-btn-main:active { background: var(--primary-hover);}
+    .modal-bg {
+      position: fixed; z-index: 51; top: 0; left: 0;
+      width: 100vw; height: 100vh; background: #0007;
+      display: flex; align-items: center; justify-content: center;
+      transition: .4s; opacity: 0; pointer-events: none;
+    }
+    .modal-bg.show { opacity: 1; pointer-events: all; }
+    .modal-card {
+      background: #fff;
+      border-radius: 22px;
+      box-shadow: 0 6px 32px #b1d6fc45;
+      width: 335px;
+      padding: 26px 18px 12px;
+      text-align: left;
+      animation: popin .5s;
+      margin: 0 auto;
+    }
+    @keyframes popin { 0% { transform: scale(.91); opacity: 0; } 100% { transform: scale(1); opacity: 1; } }
+    .modal-card h2 {
+      font-size: 18px; margin: 0 0 16px; font-weight: 700;
+      color: #174ea6;
+      text-align: center;
+    }
+    .modal-field { margin-bottom: 16px; }
+    .modal-field input, .modal-field textarea {
+      width: 100%;
+      font-size: 15px;
+      padding: 9px 9px;
+      border-radius: 8px;
+      border: 1px solid #d7e4f5;
+      outline: none;
+      background: #fafdff;
+      margin-top: 3px;
+      box-sizing: border-box;
+    }
+    .geo-btn {
+      margin: 5px 0 0 0;
+      display: inline-block;
+      font-size: 13px;
+      background: #edfaff;
+      border: none;
+      border-radius: 7px;
+      padding: 7px 13px;
+      color: #1c5;
+      cursor: pointer;
+      font-weight: 600;
+    }
+    .modal-btns {
+      display: flex;
+      justify-content: flex-end;
+      gap: 15px;
+      margin-top: 6px;
+    }
+    .modal-btn {
+      padding: 10px 21px;
+      font-size: 15px;
+      font-weight: 700;
+      border-radius: 11px;
+      border: none;
+      background: #2186e7;
+      color: #fff;
+      cursor: pointer;
+    }
+    .modal-btn.cancel {
+      background: #f0f0f0;
+      color: #205;
+    }
+    .msg {
+      padding: 12px 9px;
+      margin: 19px 0;
+      background: #fff4cc;
+      border-radius: 10px;
+      color: #ae820c;
+      text-align: center;
+      font-size: 1.13em;
+      opacity: 0;
+      transition: .3s;
+      position: fixed;
+      left: 50%;
+      top: 19px;
+      transform: translateX(-50%);
+      z-index: 99;
+      min-width: 180px;
+      max-width: 320px;
+    }
+    .msg.show { opacity: 1; }
+    .fadein { animation: fadeIn .8s; }
+    @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
     /* Прелоадер */
-    .preloader-bg {position:fixed;z-index:99;top:0;left:0;width:100vw;height:100vh;background:#fff;display:flex;align-items:center;justify-content:center;flex-direction:column;}
-    .preloader-logo {width:112px; margin-bottom:20px; filter:drop-shadow(0 2px 18px #b6c8ef);}
-    .loader-bar-wrap {width:200px; height:16px; background:#f2f2f2; border-radius:9px; overflow:hidden;}
-    .loader-bar {height:100%; width:0; background:#2376ee; border-radius:9px; transition:.3s;}
+    .preloader-bg {
+      position: fixed;
+      z-index: 99;
+      top: 0; left: 0;
+      width: 100vw; height: 100vh;
+      background: var(--logo-bg);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+      transition: .5s;
+    }
+    .preloader-logo {
+      width: 180px;
+      margin-bottom: 45px;
+      margin-top: -60px;
+      border-radius: 36px;
+      background: var(--logo-bg);
+      box-shadow: 0 4px 26px #b6c8ef4a;
+      object-fit: contain;
+    }
+    .loader-bar-wrap {
+      width: 210px; height: 12px;
+      background: #e3eefe;
+      border-radius: 8px;
+      overflow: hidden;
+      margin-bottom: 40px;
+    }
+    .loader-bar {
+      height: 100%; width: 0;
+      background: var(--primary);
+      border-radius: 8px;
+      transition: .3s;
+    }
     @media (max-width:500px) {
-      .main-app {margin-top:0;}
-      .search-wrap {padding-top:12px;}
-      .preloader-bg {padding-bottom:100px;}
-      .loader-bar-wrap {width:80vw;}
+      .main-app { min-height: 100vh; }
+      .ads-window { max-width: 99vw; }
+      .add-btn-main { max-width: 100vw; font-size: 1em;}
+      .search-wrap, .ads-window { max-width: 99vw;}
+      .preloader-bg { padding-bottom: 100px; }
+      .preloader-logo { width: 43vw; }
+      .loader-bar-wrap { width: 65vw;}
+      .modal-card { width: 97vw; min-width: 0;}
     }
   </style>
 </head>
@@ -57,11 +291,14 @@
     </div>
   </div>
   <div class="main-app fadein" id="main-app" style="visibility:hidden;">
+    <img src="https://i.ibb.co/HLc01jWL/22c6c8c1-5106-4955-bec9-7c071a2a41e3.png" class="logo-main" />
     <div class="search-wrap">
-      <input type="text" id="search-inp" class="search-inp" placeholder="Пошук по завданням..."/>
+      <input type="text" id="search-inp" class="search-inp" placeholder="Пошук по завданням..." autocomplete="off"/>
     </div>
-    <div class="ads-window" id="ads-window">
-      <div class="ads-list" id="ads-list"></div>
+    <div class="ads-container-outer">
+      <div class="ads-window" id="ads-window">
+        <div class="ads-list" id="ads-list"></div>
+      </div>
     </div>
     <button class="add-btn-main" id="add-btn">Додати оголошення</button>
   </div>
@@ -101,7 +338,7 @@
       return (/^380\d{9}$/.test(p) || /^0\d{9}$/.test(p));
     }
     function escapeHtml(t) {
-      return t.replace(/[&<>"']/g,function(m){return({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#039;'})[m];});
+      return t ? t.replace(/[&<>"']/g,function(m){return({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#039;'})[m];}) : '';
     }
     function renderAds(filter='') {
       fetch(SHEETDB_API)
@@ -131,7 +368,7 @@
       // показываем от старых к новым (новые внизу)
       wrap.innerHTML = '';
       ads.forEach(ad=>{
-        let price = ad.price ? escapeHtml(ad.price) : '—';
+        let price = (ad.price && ad.price !== "undefined") ? escapeHtml(ad.price) : '—';
         let geoHTML = ad.geo ? `<div class="ad-geo"><a href="https://maps.google.com/?q=${ad.geo}" target="_blank" style="color:#26a;text-decoration:underline;">📍 Геолокація</a></div>` : '';
         let adHTML = `<div class="ad-card">
               <div class="ad-title">${escapeHtml(ad.desc||'')}</div>
@@ -142,7 +379,7 @@
         wrap.innerHTML += adHTML;
       });
       // Скроллим вниз к последнему объявлению
-      setTimeout(()=>{$('ads-window').scrollTop = $('ads-window').scrollHeight;},50);
+      setTimeout(()=>{$('ads-window').scrollTop = $('ads-window').scrollHeight;},60);
     }
     $('search-inp').oninput = function(){ updateAds(this.value); };
     $('add-btn').onclick = ()=>{ $('add-modal').classList.add('show'); };
@@ -176,30 +413,33 @@
         body: JSON.stringify({data: ad})
       }).then(resp=>resp.json())
         .then(()=>{
-          $('add-modal').classList.remove('show');$('add-form').reset();$('geo-ok').style.display='none';$('task-geo').value='';
+          $('add-modal').classList.remove('show');
+          $('add-form').reset();
+          $('geo-ok').style.display='none';
+          $('task-geo').value='';
           showMsg('Оголошення додано!');
-          setTimeout(()=>renderAds($('search-inp').value), 1200);
+          setTimeout(renderAds,500);
         });
     };
-    // Прелоадер
-    let loadPerc = 0, interval = setInterval(()=>{
-      loadPerc+=1.3;
-      if(loadPerc>100)loadPerc=100;
-      $('loader-bar').style.width = loadPerc+'%';
-    },35);
-    setTimeout(()=>{
-      clearInterval(interval);
-      $('preloader').style.display='none';
-      $('main-app').style.visibility='visible';
-      renderAds();
-    }, 5000);
-    // Автообновление объявлений каждые 5 секунд
-    setInterval(()=>renderAds($('search-inp').value), 5000);
-    // Предотвращаем зум pinch-gesture на мобильных
-    document.addEventListener('gesturestart', function (e) {e.preventDefault();});
-    document.addEventListener('touchmove', function(event){
-      if(event.scale !== 1){event.preventDefault();}
-    }, { passive: false });
+    // Loader
+    let loaderVal=0, loaderInt=setInterval(()=>{
+      loaderVal+=7+Math.random()*8;
+      if(loaderVal>=100)loaderVal=100;
+      $('loader-bar').style.width=loaderVal+'%';
+      if(loaderVal==100){
+        clearInterval(loaderInt);
+        setTimeout(()=>{
+          $('preloader').style.display='none';
+          $('main-app').style.visibility='visible';
+          renderAds();
+          setInterval(renderAds, 3500);
+        },400);
+      }
+    },95);
+    // Фикс скролла — только в ads-window!
+    document.body.style.overflow = "hidden";
+    $('ads-window').addEventListener('touchmove',e=>{e.stopPropagation();});
+    $('ads-window').addEventListener('wheel',e=>{e.stopPropagation();});
   </script>
 </body>
 </html>
